--- a/templates/views/weather.hbs
+++ b/templates/views/weather.hbs
@@ -30,7 +30,7 @@
                 </div>
                 
                 <div class="middle_layer">
-                    <p id="temp"><span id="temp_real_val">0</span><sup>o</sup>K</p>
+                    <p id="temp"><span id="temp_real_val">0</span><sup>o</sup>C</p>
                     <p id="temp_status"><i class="fa fa-cloud" aria-hidden="true"></i></p>
                 </div>
 
